# python-project-lvl1

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
brain_games/: cli.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
