[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = ""
authors = ["alexandr.fufaev <alexander.fufaev@quantron-systems.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^0.790"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
